--- a/style.css
+++ b/style.css
@@ -116,6 +116,9 @@ footer {
   box-shadow: 
     0 0 25px rgba(255, 255, 255, 0.05),
     0 0 8px rgba(255, 255, 255, 0.1) inset;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .vinil::before {
@@ -130,7 +133,10 @@ footer {
   transform: translate(-50%, -50%);
 }
 
-.girar {
+.disco-interno {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
   animation: girar 3s linear infinite;
 }
 
