--- a/style.css
+++ b/style.css
@@ -47,16 +47,19 @@ body, html {
 
 #site {
   display: none;
+  height: 100vh;
   flex-direction: column;
   align-items: center;
-  padding: 40px 20px;
+  justify-content: center;
+  padding: 20px;
   animation: fadeIn 1s ease forwards;
 }
 
 .container {
   display: flex;
   justify-content: center;
-  margin-bottom: 2rem;
+  align-items: center;
+  height: 100%;
 }
 
 .card {
